// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sui test GifGrid Component should be render correctly 1`] = `
<Fragment>
  <h3
    className="card animate__animated animate__fadeIn"
  >
    Death Note
  </h3>
  <p
    className="card animate__animated animate__flash"
  >
    loading...
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;

exports[`Sui test GifGrid Component should be render elements mocked 1`] = `
<Fragment>
  <h3
    className="card animate__animated animate__fadeIn"
  >
    Death Note
  </h3>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="http://localhost/ciualquier/cosa.jpg"
    />
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="http://localhost/ciualquier/cosa.jpg"
    />
  </div>
</Fragment>
`;
